--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-spinner/paper-spinner.html">
 <link rel="import" href="../bower_components/paper-slider/paper-slider.html">
-
+<link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 <!-- Neon elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
@@ -83,3 +83,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="profile-docent/profile-docent.html">
 <link rel="import" href="docent-list-edit/docent-list-edit.html">
 <link rel="import" href="homescreen-element/homescreen-element.html">
+<link rel="import" href="appointment-list-admin/appointment-list-admin.html">
