slot toggle fix

--- a/app/elements/slot-list/slot-list.html
+++ b/app/elements/slot-list/slot-list.html
@@ -48,7 +48,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <paper-card>
 
-        <div class="card-content pointer" on-click="expandSlots">
+        <div class="card-content">
 
           <paper-button on-click="expandSlots">
             <iron-icon id="{{computeID1(list.date)}}" icon="{{icon}}"></iron-icon>
